srcs/tester/base/vector/back/log.txt
./base/vector/back/patched.cpp:7:2: error: use of undeclared identifier 'ft'
 ft::vector<int> myvector;
 ^
./base/vector/back/patched.cpp:9:2: error: use of undeclared identifier 'myvector'
 myvector.push_back(10);
 ^
./base/vector/back/patched.cpp:11:9: error: use of undeclared identifier 'myvector'
 while (myvector.back() != 0)
        ^
./base/vector/back/patched.cpp:13:2: error: use of undeclared identifier 'myvector'
 myvector.push_back ( myvector.back() -1 );
 ^
./base/vector/back/patched.cpp:13:23: error: use of undeclared identifier 'myvector'
 myvector.push_back ( myvector.back() -1 );
                      ^
./base/vector/back/patched.cpp:17:23: error: use of undeclared identifier 'myvector'
 for (unsigned i=0; i<myvector.size() ; i++)
                      ^
./base/vector/back/patched.cpp:18:22: error: use of undeclared identifier 'myvector'
 std::cout << ' ' << myvector[i];
                     ^
7 errors generated.
